# homiere_research_public

./: .gitignore  LICENSE  README.md  pyproject.toml
data/lit_review/: lit_review_raw.json
docs/: literature_review.md
papers/answer-engines/: README.md
papers/answer-engines/analysis/: exp1_analysis.py  make_figures.py
papers/answer-engines/data/: DISCLAIMER.md
papers/answer-engines/data/corpora/: exp1_candidates.json  exp1_evidence.json  exp1_roster.json  exp2_features.json  exp2b_faq.json  pilot.json
papers/answer-engines/data/evidence_raw/: combined.json
papers/answer-engines/data/runs/exp1_main/: records.jsonl  trials.csv
papers/answer-engines/data/runs/exp1_screening/: records.jsonl
papers/answer-engines/data/runs/exp2_main/: records.jsonl  trials.csv
papers/answer-engines/data/runs/exp2b_faq/: records.jsonl  trials.csv
papers/answer-engines/data/runs/pilot/: records.jsonl
papers/answer-engines/docs/: exp1_findings.md  exp1_screening_findings.md  exp2_findings.md  pilot_findings.md
papers/answer-engines/experiments/exp1/: build_corpus.py  run_exp1.py  screen.py
papers/answer-engines/experiments/exp2/: run_exp2.py
papers/answer-engines/experiments/pilot/: run_pilot.py
papers/answer-engines/paper/: Makefile  paper.tex  references.bib
src/aeo/: bedrock.py  compare.py  judge.py  metrics.py  runlog.py  search_tool.py
tests/: test_compare.py  test_judge.py  test_metrics.py  test_search_tool.py
