[project]
name = "aeo-research"
version = "0.1.0"
description = "Controlled experiments on how LLM answer engines weigh parametric knowledge against retrieved evidence (public reproduction of paper.pdf)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "matplotlib>=3.11.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "tenacity>=8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aeo"]

[tool.ruff]
line-length = 100
